@@ -804,9 +804,9 @@ mosq_EXPORT int mosquitto_apply_on_all_clients(int (*FUNC_client_functor)(const 
  *
  * This function allows a plugin to publish a message. Messages published in
  * this way are treated as coming from the broker and so will not be passed to
- * `mosquitto_auth_acl_check(, MOSQ_ACL_WRITE, , )` for checking. Read access
- * will be enforced as normal for individual clients when they are due to
- * receive the message.
+ * the MOSQ_EVT_ACL_CHECK nor MOSQ_EVT_MESSAGE_IN events. Read access will be
+ * enforced as normal for individual clients when they are due to receive the
+ * message.
  *
  * It can be used to send messages to all clients that have a matching
  * subscription, or to a single client whether or not it has a matching
@@ -882,6 +882,91 @@ mosq_EXPORT int mosquitto_broker_publish_copy(
 		int qos,
 		bool retain,
 		mosquitto_property *properties);
+
+
+/* Function: mosquitto_plugin_publish
+ *
+ * Publish a message from within a plugin.
+ *
+ * This function allows a plugin to publish a message. Messages published in
+ * this way are treated as coming from the broker and so will not be passed to
+ * the MOSQ_EVT_ACL_CHECK event. Read access will be enforced as normal for
+ * individual clients when they are due to receive the message.
+ *
+ * The important difference compared to mosquitto_broker_publish* is that
+ * messages from this function follow the same flow as messages from clients
+ * after they have been accepted. This means that messages do go through the
+ * MOSQ_EVT_MESSAGE_IN event. If your plugin generates new messages in its
+ * MOSQ_EVT_MESSAGE_IN event, it is important to ensure you do not create an
+ * infinite loop.
+ *
+ * Parameters:
+ *  topic -      message topic
+ *  payloadlen - payload length in bytes. Can be 0 for an empty payload.
+ *  payload -    payload bytes. If payloadlen > 0 this must not be NULL. Must
+ *               be allocated on the heap. Will be freed by mosquitto after use if the
+ *               function returns success.
+ *  qos -        message QoS to use.
+ *  retain -     should retain be set on the message. This does not apply if
+ *               clientid is non-NULL.
+ *  properties - MQTT v5 properties to attach to the message. If the function
+ *               returns success, then properties is owned by the broker and
+ *               will be freed at a later point.
+ *
+ * Returns:
+ *   MOSQ_ERR_SUCCESS - on success
+ *   MOSQ_ERR_INVAL - if topic is NULL, if payloadlen < 0, if payloadlen > 0
+ *                    and payload is NULL, if qos is not 0, 1, or 2.
+ *   MOSQ_ERR_NOMEM - on out of memory
+ */
+mosq_EXPORT int mosquitto_plugin_publish(
+		const char *topic,
+		int payloadlen,
+		void *payload,
+		int qos,
+		bool retain,
+		mosquitto_property *properties);
+
+
+/* Function: mosquitto_plugin_publish_copy
+ *
+ * Publish a message from within a plugin.
+ *
+ * This function is identical to mosquitto_plugin_publish, except that a copy
+ * of `payload` is taken.
+ *
+ * Parameters:
+ *  topic -      message topic
+ *  payloadlen - payload length in bytes. Can be 0 for an empty payload.
+ *  payload -    payload bytes. If payloadlen > 0 this must not be NULL.
+ *	             Memory remains the property of the calling function.
+ *  qos -        message QoS to use.
+ *  retain -     should retain be set on the message. This does not apply if
+ *               clientid is non-NULL.
+ *  properties - MQTT v5 properties to attach to the message. If the function
+ *               returns success, then properties is owned by the broker and
+ *               will be freed at a later point.
+ *
+ * Returns:
+ *   MOSQ_ERR_SUCCESS - on success
+ *   MOSQ_ERR_INVAL - if topic is NULL, if payloadlen < 0, if payloadlen > 0
+ *                    and payload is NULL, if qos is not 0, 1, or 2.
+ *   MOSQ_ERR_NOMEM - on out of memory
+ */
+mosq_EXPORT int mosquitto_plugin_publish_copy(
+		const char *topic,
+		int payloadlen,
+		const void *payload,
+		int qos,
+		bool retain,
+		mosquitto_property *properties);
+
+
+/* =========================================================================
+ *
+ * Section: Authentication functions
+ *
+ * ========================================================================= */
 
 /* Function: mosquitto_complete_basic_auth
  *
