@@ -40,6 +40,8 @@ _mosquitto_persist_client_update
 _mosquitto_persist_retain_msg_delete
 _mosquitto_persist_retain_msg_set
 _mosquitto_persistence_location
+_mosquitto_plugin_publish
+_mosquitto_plugin_publish_copy
 _mosquitto_plugin_set_info
 _mosquitto_property_add_binary
 _mosquitto_property_add_byte
