@@ -210,14 +210,15 @@ BROKER_EXPORT const char *mosquitto_client_username(const struct mosquitto *clie
 }
 
 
-BROKER_EXPORT int mosquitto_broker_publish(
+static int broker_publish(
 		const char *clientid,
 		const char *topic,
 		int payloadlen,
 		void *payload,
 		int qos,
 		bool retain,
-		mosquitto_property *properties)
+		mosquitto_property *properties,
+		enum mosquitto_msg_origin origin)
 {
 	struct mosquitto__base_msg *base_msg;
 
@@ -233,6 +234,7 @@ BROKER_EXPORT int mosquitto_broker_publish(
 	if(base_msg == NULL){
 		return MOSQ_ERR_NOMEM;
 	}
+	base_msg->origin = origin;
 
 	if(clientid){
 		base_msg->data.source_id = mosquitto_strdup(clientid);
@@ -260,14 +262,15 @@ BROKER_EXPORT int mosquitto_broker_publish(
 }
 
 
-BROKER_EXPORT int mosquitto_broker_publish_copy(
+static int broker_publish_copy(
 		const char *clientid,
 		const char *topic,
 		int payloadlen,
 		const void *payload,
 		int qos,
 		bool retain,
-		mosquitto_property *properties)
+		mosquitto_property *properties,
+		enum mosquitto_msg_origin origin)
 {
 	void *payload_out;
 	int rc;
@@ -286,19 +289,102 @@ BROKER_EXPORT int mosquitto_broker_publish_copy(
 	}
 	memcpy(payload_out, payload, (size_t)payloadlen);
 
-	rc = mosquitto_broker_publish(
+	rc = broker_publish(
 			clientid,
 			topic,
 			payloadlen,
 			payload_out,
 			qos,
 			retain,
-			properties);
+			properties,
+			origin);
 
 	if(rc){
 		mosquitto_FREE(payload_out);
 	}
 	return rc;
+}
+
+
+BROKER_EXPORT int mosquitto_broker_publish_copy(
+		const char *clientid,
+		const char *topic,
+		int payloadlen,
+		const void *payload,
+		int qos,
+		bool retain,
+		mosquitto_property *properties)
+{
+	return broker_publish_copy(
+			clientid,
+			topic,
+			payloadlen,
+			payload,
+			qos,
+			retain,
+			properties,
+			mosq_mo_broker);
+}
+
+
+BROKER_EXPORT int mosquitto_broker_publish(
+		const char *clientid,
+		const char *topic,
+		int payloadlen,
+		void *payload,
+		int qos,
+		bool retain,
+		mosquitto_property *properties)
+{
+	return broker_publish(
+			clientid,
+			topic,
+			payloadlen,
+			payload,
+			qos,
+			retain,
+			properties,
+			mosq_mo_broker);
+}
+
+
+BROKER_EXPORT int mosquitto_plugin_publish_copy(
+		const char *topic,
+		int payloadlen,
+		const void *payload,
+		int qos,
+		bool retain,
+		mosquitto_property *properties)
+{
+	return broker_publish_copy(
+			NULL,
+			topic,
+			payloadlen,
+			payload,
+			qos,
+			retain,
+			properties,
+			mosq_mo_plugin);
+}
+
+
+BROKER_EXPORT int mosquitto_plugin_publish(
+		const char *topic,
+		int payloadlen,
+		void *payload,
+		int qos,
+		bool retain,
+		mosquitto_property *properties)
+{
+	return broker_publish(
+			NULL,
+			topic,
+			payloadlen,
+			payload,
+			qos,
+			retain,
+			properties,
+			mosq_mo_plugin);
 }
 
 
